# DataPipeline

./: .env_example  .gitignore  README.md  pyproject.toml  setup.py
dags/dags/: run_dbt_pipeline.py
data_app/: connection_string.json  data_connection.py  main.py
data_extract/: data_connection.py  main.py  models.py  orm_read.py
data_extract/test_data_extract/: test_main.py
data_load/: base_logger.py  connection_string.json  data_connection.py  models.py  orm_load.py
data_visuals/: clean_data.py  db_conn.py  geo_viz.py  get_data.py  notebook.ipynb
dbt_stock_models/: .user.yml  dbt_project.yml  profiles.yml
dbt_stock_models/macros/: convert_to_usd.sql
dbt_stock_models/models/company_stock/: market_stock.sql  schema.yml  source.yml  sources.yml  stock.sql
kafka/: kafka_consumer.py  kafka_main.py  kafka_producer.py
test_data_app/: test_main.py
